--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
                 <!-- logo -->
                 <div class="flex items-center gap-6">
                     <a href="#home" class="flex items-center gap-2 group">
-                        <div class="w-10 h-10 rounded-lg bg-gradient-to-br from-green-500 to-green-600 flex items-center justify-center text-white font-bold shadown-sm group-hover:scale-105 transition-transform">
-                            GFG
+                        <div class="w-10 h-10 rounded-lg text-white bg-gradient-to-br from-green-500 to-green-700 flex items-center justify-center shadown-sm group-hover:scale-105 transition-transform">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-briefcase"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
+                                <path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2" />
+                                <path d="M12 12l0 .01" /><path d="M3 13a20 20 0 0 0 18 0" />
+                            </svg>                        
                         </div>
-                        <div class="hidden sm:block">
+                        <div class="sm:block">
                             <div class="text-lg font-semibold text-slate-800">
-                                GeeksForGeeks<span class="text-green-500">Jobs</span>
+                                CareerLink<span class="text-green-500">Jobs</span>
                             </div>
                             <div class="text-xs text-slate-500 -mt-0.5">
                                 Jobs . Hiring . Careers
@@ -28,12 +31,20 @@
                     </a>
 
                     <!-- Nav-links -->
-                     <nav class="hidden lg-flex items-center gap-4 text-sm font-medium text-slate-600">
-                        <a href="#home" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">Home</a>
-                        <a href="#available" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">Available Jobs</a>
-                        <a href="#listing" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">Job Listing</a>
-                        <a href="#popular" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">Popular Jobs</a>
-                     </nav>
+                    <nav class="hidden sm:flex items-center gap-4 text-sm font-medium text-slate-600"> 
+                        <a href="#home" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">
+                            Home
+                        </a> 
+                        <a href="#available" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">
+                            Available Jobs
+                        </a> 
+                        <a href="#listings" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">
+                            Job Listing
+                        </a> 
+                        <a href="#popular" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">
+                            Popular Jobs
+                        </a> 
+                    </nav>
                 </div>
 
                  <!-- RIGHT SIDE BUTTONS -->
@@ -1126,8 +1137,8 @@
     </section>
 
     <!-- Apply modal -->
-    <div id="applyModal" class="fixed hidden inset-0 z-50 flex items-center justify-center bg-black/50 backdrop-blur-sm">
-        <div class="bg-white rounded-2xl shadow-2xl p-6 w-full max-w-md transform" id="applyContent">
+    <div id="applyModal" class="fixed inset-0 z-50 opacity-0 pointer-events-none flex items-center justify-center bg-black/50 backdrop-blur-sm transition-all duration-300 ease-in-out">
+        <div class="bg-white rounded-2xl shadow-2xl p-6 w-full max-w-md transform scale-90 opacity-0 transition-all duration-300 ease-out" id="applyContent">
             <div class="flex items-start justify-between mb-4">
                 <h3 class="text-xl font-semibold text-slate-800">
                     Apply for this Job
@@ -1233,7 +1244,7 @@
     </div>
 
     <!-- Post job modal -->
-    <div id="postJobModal" class="fixed inset-0 z-50 hidden flex items-center justify-center bg-black/50 backdrop-blur-sm">
+    <div id="postJobModal" class="fixed inset-0 z-50 hidden flex items-center justify-center bg-black/50 backdrop-blur-sm transition-all duration-300 ease-in-out">
         <div id="postJobContent" class="bg-white rounded-2xl shadow-2xl p-6 w-full max-w-2xl transform">
             <div class="flex items-center justify-between mb-4">
                 <h3 class="text-xl font-semibold text-slate-800 flex items-center gap-2">
@@ -1311,12 +1322,12 @@
                 <!-- About -->
                 <div class="flex flex-col">
                     <div class="flex gap-2 items-center">
-                        <div class="flex justify-between items-center p-2 bg-gradient-to-br from-green-500 to-green-700 rounded-lg">
-                            <h2 class="text-white text-sm font-medium">GFG</h2>
+                        <div class="flex justify-between text-white items-center p-2 bg-gradient-to-br from-green-500 to-green-700 rounded-lg">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-briefcase"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" /><path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2" /><path d="M12 12l0 .01" /><path d="M3 13a20 20 0 0 0 18 0" /></svg>
                         </div>
-                        <h3 class="font-medium text-lg">GeeksForGeeks Jobs</h3>
+                        <h3 class="font-medium text-lg">CareerLink Jobs</h3>
                     </div>
-                    <p class="mt-2 text-slate-600 text-sm">GeeksForGeeks Job Portal helps millions of developers and engineers connect with top employers. Start your next big career move here!</p>
+                    <p class="mt-2 text-slate-600 text-sm">CareerLink Job Portal helps millions of developers and engineers connect with top employers. Start your next big career move here!</p>
                     <div class="flex mt-4 gap-2">
                         <svg class="w-6 h-6 text-gray-800 dark:text-slate-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M22 5.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.343 8.343 0 0 1-2.605.981A4.13 4.13 0 0 0 15.85 4a4.068 4.068 0 0 0-4.1 4.038c0 .31.035.618.105.919A11.705 11.705 0 0 1 3.4 4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 6.1 13.635a4.192 4.192 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 2 18.184 11.732 11.732 0 0 0 8.291 20 11.502 11.502 0 0 0 19.964 8.5c0-.177 0-.349-.012-.523A8.143 8.143 0 0 0 22 5.892Z" clip-rule="evenodd"/>
@@ -1369,7 +1380,7 @@
 
             <!--  -->
             <div class="mt-12 pt-6 border-t border-slate-200 flex flex-col sm:flex-row items-center justify-between text-sm text-slate-500">
-                <p>© 2025 GeeksforGeeks Job Portal. All rights reserved.</p>
+                <p>© 2025 CareerLink Job Portal. All rights reserved.</p>
                 <div class="flex items-center gap-4 mt-3 sm:mt-0">
                     <a href="#" class="hover:text-indigo-600">Privacy Policy</a>
                     <a href="#" class="hover:text-indigo-600">Terms</a>
@@ -1379,6 +1390,10 @@
         </div>
     </footer>
 
+    <script>
+        
+
+    </script>
 
 </body>
 </html>
