--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </a>
 
                     <!-- Nav-links -->
-                    <nav class="hidden sm:flex items-center gap-4 text-sm font-medium text-slate-600"> 
+                    <nav class="hidden md:flex items-center gap-4 text-sm font-medium text-slate-600"> 
                         <a href="#home" class="py-2 px-3 rounded hover:text-indigo-600 hover:bg-indigo-50">
                             Home
                         </a> 
@@ -52,7 +52,7 @@
                     <!-- Post Job -->
                     <button
                     id="openPostJob"
-                    class="hidden md:inline-flex items-center gap-2 px-4 py-2 rounded-md border border-indigo-600 text-indigo-600 text-sm font-medium hover:bg-indigo-50 transition"
+                    class="hidden lg:inline-flex items-center gap-2 px-4 py-2 rounded-md border border-indigo-600 text-indigo-600 text-sm font-medium hover:bg-indigo-50 transition"
                     data-open-modal="postJobModal"
                     >
                     <svg
@@ -82,7 +82,7 @@
                     <!-- Job Seeker Login -->
                     <button
                     id="loginSeekerBtn"
-                    class="px-4 py-2 text-sm font-medium rounded-md bg-indigo-600 text-white hover:bg-indigo-700 shadow-sm transition" data-open-modal="seekerModal"
+                    class="hidden lg:inline px-4 py-2 text-sm font-medium rounded-md bg-indigo-600 text-white hover:bg-indigo-700 shadow-sm transition" data-open-modal="seekerModal"
                     >
                     Job Seeker
                     </button>
@@ -111,6 +111,28 @@
 
         </div>
     </header>
+
+    <!-- Mobile Menu -->
+<div id="mobileMenu" class="hidden bg-white border-b border-slate-200">
+    <nav class="flex flex-col p-4 space-y-2 text-slate-700 text-sm">
+        <a href="#home" class="py-2 px-3 rounded hover:bg-slate-100 md:hidden">Home</a>
+        <a href="#available" class="py-2 px-3 rounded hover:bg-slate-100 md:hidden">Available Jobs</a>
+        <a href="#listings" class="py-2 px-3 rounded hover:bg-slate-100 md:hidden">Job Listing</a>
+        <a href="#popular" class="py-2 px-3 rounded hover:bg-slate-100 md:hidden">Popular Jobs</a>
+
+        <button class="w-full text-left px-3 py-2 rounded-md border border-indigo-600 text-indigo-600 font-medium hover:bg-indigo-50 lg:hidden">
+        Post Job
+        </button>
+
+        <button class="w-full text-left px-3 py-2 rounded-md border border-slate-300 text-slate-700 font-medium hover:bg-slate-100 lg:hidden">
+        Recruiter Login
+        </button>
+
+        <button class="w-full text-left px-3 py-2 rounded-md bg-indigo-600 text-white font-medium hover:bg-indigo-700 lg:hidden">
+        Job Seeker
+        </button>
+    </nav>
+</div>
 
     <!-- Hero section -->
     <section id="home" class="relative min-h-[90vh] flex items-center bg-gradient-to-br from-indigo-600 via-sky-600 to-blue-500 text-white overflow-hidden">
@@ -287,7 +309,7 @@
             </div>
 
             <!-- Job cards -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- card-1 -->
                 <article class="bg-white rounded-2xl border border-slate-200 shadow-sm hover:shadow-lg hover:translate-y-1 transition-all duration-300 h-full flex flex-col relative">
                     <div class="p-6">
@@ -688,7 +710,7 @@
                         </div>
                     </div>
                     <!-- Job Cards Grid -->
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                         <!-- Job card-1 -->
                         <article class="relative  bg-white rounded-2xl border border-slate-200 shadow-sm hover:shadow-lg hover:translate-y-0.5 transition-all duration-300 p-5 ">
                             <div class="flex items-start justify-between">
@@ -994,7 +1016,7 @@
                 </div>
             </div>
             <!-- popular jobs cards -->
-            <div class="grid grid-cols-3 gap-8 mt-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-6">
 
                 <!-- card-1 -->
                 <article class="bg-white rounded-2xl border border-slate-200 shadow-sm hover:shadow-lg hover:translate-y-1 transition-all duration-300 h-full flex flex-col relative">
@@ -1377,7 +1399,7 @@
                         <h3 class="font-medium text-lg">Contact Us</h3>
                         <div class="flex flex-col mt-2 text-slate-600 text-sm gap-1">
                             <p>Email: <a href="">jobs@gmail.com</a></p>
-                            <p>Phone: <a href="">+91 98745 65234</a></p>
+                            <p>Phone: <a href="">+91 12345 67890</a></p>
                             <p>Address: Noida, Uttar Pradesh, India</p>
                         </div>
                     </div>
@@ -1444,6 +1466,13 @@
                 closeModal(modal);
             });
         });
+
+        const mobileBtn = document.getElementById("mobileBtn");
+        const mobileMenu = document.getElementById("mobileMenu");
+
+        mobileBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+    });
 
     </script>
 
